# stencil_library

./: LICENSE  README.md
src_optimization/00_unoptimized/: exe_op_bench_likwid-perfctr_gauss3.ipynb  exe_op_bench_likwid-perfctr_gauss7.ipynb  exe_op_bench_sparse_band.cpp  exe_runtime_by_cells_gauss7.csv  meson.build
src_optimization/00_unoptimized_01/: c_sparse_csr_matrix.hpp  e_linear_stencil.cpp  e_memory_by_cells.csv  e_plot.ipynb  e_roofline.sh  e_roofline_batch.sh  e_roofline_gauss3.csv  e_roofline_gauss3.ipynb  e_roofline_gauss3_old.csv  e_roofline_gauss7.csv  e_roofline_gauss7.ipynb  e_roofline_gauss7_old.csv  e_runtime_by_cells.csv  e_sparse_csr.cpp  e_sparse_csr_likwid.cpp  meson.build  runtime_by_cells_gauss3.csv
src_optimization/01_compiler_optimized/: c_linear_stencil.hpp  exe_op_bench_likwid-perfctr_gauss3.ipynb  exe_op_bench_likwid-perfctr_gauss7.ipynb  exe_op_bench_likwid-perfctr_gauss7.sh  exe_op_bench_linear_stencil.cpp  meson.build
src_optimization/01_compiler_optimized_01/: c_sparse_band_matrix.hpp  e_linear_stencil_likwid.cpp  e_memory_by_cells.sh  e_roofline_gauss3.csv  e_roofline_gauss3.ipynb  e_roofline_gauss3_old.csv  e_roofline_gauss7.csv  e_roofline_gauss7.ipynb  e_roofline_gauss7_old.csv  e_runtime_by_cells.sh  e_runtime_by_cells_batch.sh  e_sparse_band.cpp  e_sparse_band_likwid.cpp  meson.build
src_optimization/03_vcl_vectorization/: c_linear_stencil_vcl.hpp  exe_op_bench_likwid-perfctr_gauss3.ipynb  exe_op_bench_linear_stencil.cpp  exe_op_bench_linear_stencil_vcl.cpp  exe_verify_operator.cpp  meson.build
src_optimization/03_vcl_vectorization_02_cg/: c_sol_cg_01_buffer.hpp  c_stencil_diff_3d_02_oc_ne.hpp  c_stencil_diff_3d_03_oc_ne_vcl.hpp  e_roofline.ipynb  exe_op_bench_likwid-perfctr_gauss3.ipynb  exe_op_bench_likwid-perfctr_gauss3.sh  exe_op_bench_linear_stencil.cpp  exe_op_bench_linear_stencil_vcl.cpp  exe_runtime_by_cells.ipynb  i_operator.hpp  meson.build
src_optimization/04_tiling/: c_linear_stencil_notiling.hpp  c_linear_stencil_tiling.hpp  exe_op_bench_linear_stencil_likwid_cache.ipynb  exe_op_bench_linear_stencil_likwid_cache_cube2050_gauss3.csv  exe_op_bench_linear_stencil_likwid_roofline.ipynb  exe_op_bench_linear_stencil_notiling.cpp  exe_op_bench_linear_stencil_notiling_cache.sh  exe_op_bench_linear_stencil_notiling_likwid.cpp  exe_op_bench_linear_stencil_notiling_likwid_roofline_gauss3.csv  exe_op_bench_linear_stencil_notiling_roofline.sh  exe_op_bench_linear_stencil_tiling.cpp  exe_op_bench_linear_stencil_tiling_likwid.cpp  exe_op_bench_linear_stencil_tiling_likwid_cache.sh  exe_op_bench_linear_stencil_tiling_likwid_roofline_gauss3.csv  exe_op_bench_linear_stencil_tiling_roofline.sh  exe_runtime_by_tiling.cpp  exe_runtime_by_tiling.ipynb  exe_runtime_by_tiling_gauss3.csv  exe_verify_operator.cpp  meson.build  notify.sh
src_optimization/06_openmp_stencil_01_firsttouch/: e_efficiency_01.csv  e_efficiency_strong_env.sh  e_efficiency_strong_likwid-pin.sh  e_efficiency_weak_env.sh  e_linear_stencil.cpp  e_linear_stencil_firsttouch_likwid.cpp  e_linear_stencil_firsttouch_likwid_roofline_gauss3.csv  e_linear_stencil_likwid.cpp  e_linear_stencil_strong_scale_gauss3.csv  e_linear_stencil_strong_scale_rnd_gauss3.csv  e_numa.csv  e_plot.ipynb  e_roofline_firsttouch.ipynb  e_roofline_firsttouch.sh  meson.build
src_optimization/11_several_coeff_01_precalc/: c_linear_stencil.hpp  c_linear_stencil_precalc.hpp  e_efficiency_by_threads.csv  e_efficiency_by_threads.sh  e_efficiency_by_threads_old.csv  e_linear_stencil_precalc.cpp  e_linear_stencil_precalc_likwid.cpp  e_memory_by_cells.csv  e_memory_by_cells.sh  e_memory_by_cells_old.csv  e_memory_by_threads.csv  e_memory_by_threads.sh  e_memory_by_threads_old.csv  e_roofline.csv  e_roofline.ipynb  e_roofline.sh  e_roofline_old.csv  e_runtime_by_cells.sh  e_runtime_by_cells_old.csv  e_verify.cpp  meson.build
src_optimization/22_nonlinear_stencil_02_efficiency/: c_nonlinear_stencil.hpp  c_state_function_costly_0.hpp  c_state_function_costly_2.hpp  c_state_function_exp.hpp  c_state_function_pow2.hpp  c_state_function_pow4_3.hpp  e_efficiency_by_applyruns.csv  e_efficiency_by_cells.csv  e_efficiency_by_cells.sh  e_efficiency_by_cells_old.csv  e_efficiency_by_threads.csv  e_efficiency_by_threads.sh  e_efficiency_by_threads_batch.sh  e_efficiency_by_threads_old.csv  e_measure_ops.cpp  e_measure_ops.csv  e_measure_ops.sh  e_nonlinear_stencil_costly_0.cpp  e_nonlinear_stencil_costly_1.cpp  e_nonlinear_stencil_costly_2.cpp  e_nonlinear_stencil_costly_2_likwid.cpp  e_nonlinear_stencil_exp.cpp  e_nonlinear_stencil_exp_likwid.cpp  e_nonlinear_stencil_mul2.cpp  e_nonlinear_stencil_mul2_likwid.cpp  e_nonlinear_stencil_pow2.cpp  e_nonlinear_stencil_pow2_likwid.cpp  e_nonlinear_stencil_pow4_3.cpp  e_nonlinear_stencil_pow4_3_likwid.cpp  e_nonlinear_stencil_precalc_costly_0.cpp  e_nonlinear_stencil_precalc_costly_1.cpp  e_nonlinear_stencil_precalc_costly_2.cpp  e_nonlinear_stencil_precalc_exp.cpp  e_nonlinear_stencil_precalc_mul2_likwid.cpp  e_nonlinear_stencil_precalc_pow2.cpp  e_nonlinear_stencil_precalc_pow4_3.cpp  e_plot.ipynb  e_roofline.ipynb  e_roofline.sh  e_roofline_batch.sh  (+3 more)
src_optimization/30_cg_one_coeff/: c_cg_b5.hpp  c_cg_b7.hpp  c_stencil.hpp  e_cg_b5.cpp  e_cg_b7.cpp  e_efficiency.csv  e_efficiency.sh  e_linear_stencil.cpp  e_plot.ipynb  e_verify.cpp  e_verify_noedgecases.cpp  meson.build
src_optimization/40_nonlinear_cg/: c_cg.hpp  c_nonlinear_stencil_precalc.hpp  c_state_function_costly_1.hpp  c_state_function_exp.hpp  c_state_function_pow2.hpp  c_timestep_calculator.hpp  e_cg_nonlinear_exp.cpp  e_cg_nonlinear_exp_likwid.cpp  e_cg_nonlinear_mul2.cpp  e_cg_nonlinear_mul2_likwid.cpp  e_cg_nonlinear_pow2.cpp  e_cg_nonlinear_pow2_likwid.cpp  e_cg_nonlinear_pow4_3.cpp  e_cg_nonlinear_pow4_3_likwid.cpp  e_cg_nonlinear_precalc_mul2.cpp  e_cg_nonlinear_precalc_mul2_likwid.cpp  e_efficiency_by_applyruns.sh  e_efficiency_by_threads.csv  e_efficiency_by_threads.sh  e_nonlinear_stencil_costly_0_likwid.cpp  e_nonlinear_stencil_costly_1_likwid.cpp  e_nonlinear_stencil_precalc_mul2.cpp  e_plot.ipynb  (+6 more)
(+216 files in other folders)
